File - Close Solution can now be used.
Pass the ProjectService.OpenSolution an existing ASP.NET vNext
solution created in memory.

--- a/src/KBinding/KBinding.csproj
+++ b/src/KBinding/KBinding.csproj
@@ -44,6 +44,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Build" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
